Add sections and images

--- a/index.html
+++ b/index.html
@@ -5,13 +5,52 @@
 	<link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
 <body>
-	<!-- Top Header -->
+	<!-- Top Header Section-->
+
 	<div>
 		<h1>Discover hidden placess in the world around you</h1>
 		<div class="link">
-			<a href="">Download Excursion (Coming soon!).</a>
+			<a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!).</a>
 		</div>
 	</div>
+
+	<!-- Video Section -->
+
+	<div>
+		<br>
+		<video src="./resources/excursion.mp4"></video>
+	</div>
+
+	<!-- Middle Section -->
+
+	<div>
+		<h2>Your personal travel guide</h2>
+		<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+	</div>
+
+	<!-- Bottom Section -->
+
+	<div>
+		<img src="./resources/images/camp.jpg" alt="campsite at night">
+		<br>
+		<img src="./resources/images/phone.png" alt="phone icon">
+
+		<br>
+		<h2>Coming Soon for iPhone and Android</h2>
+		<div class="link">
+			<a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!).</a>
+		</div>
+	</div>
+
+	<!-- Footer Section -->
+	<div class="footer">
+		© Excursion
+	</div>
+	</div>
+	
+
+
+
 	
 
 
