--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<div>
 		<br>
-		<video src="./resources/excursion.mp4"></video>
+		<video autoplay muted><source src="./resources/excursion.mp4" type="video/mp4">Your browser doesn't support the video tag</video>
 	</div>
 
 	<!-- Middle Section -->
