Removed period at the end of the links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div>
 		<h1>Discover hidden placess in the world around you</h1>
 		<div class="link">
-			<a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!).</a>
+			<a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a>
 		</div>
 	</div>
 
@@ -40,7 +40,7 @@
 		<br>
 		<h2>Coming Soon for iPhone and Android</h2>
 		<div class="link">
-			<a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!).</a>
+			<a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a>
 		</div>
 	</div>
 
