--- a/index.html
+++ b/index.html
@@ -25,19 +25,16 @@
 
 	<div>
 		<h2>Your personal travel guide</h2>
-		<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+		<p class="subheader">Excursion remembers places you like, and recommends new points of interest around you.</p>
 	</div>
 
 	<!-- Bottom Section -->
 
 	<div>
-		<img src="./resources/images/camp.jpg" alt="campsite at night">
+		<p><img src="./resources/images/camp.jpg" alt="campsite at night"></p>
 
-		<br>
-		<br>
-		<img src="./resources/images/phone.png" alt="phone icon">
+		<p><img src="./resources/images/phone.png" alt="phone icon"></p>
 
-		<br>
 		<h2>Coming Soon for iPhone and Android</h2>
 		<div class="link">
 			<a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a>
