Add subheader class to css and h4 tag

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<div>
 		<h2>Your personal travel guide</h2>
-		<p class="subheader">Excursion remembers places you like, and recommends new points of interest around you.</p>
+		<h4 class="subheader">Excursion remembers places you like, and recommends new points of interest around you.</h4>
 	</div>
 
 	<!-- Bottom Section -->
