Add paragraph tag to bottom link

--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 
 		<h2>Coming Soon for iPhone and Android</h2>
 		<div class="link">
-			<a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a>
+			<p><a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
 		</div>
 	</div>
 
 	<!-- Footer Section -->
+
 	<div class="footer">
 		© Excursion
 	</div>
